# catboost-incremental

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  entrypoint.sh  pyproject.toml  requirements.txt  ruff.toml
catboost_incremental/: __init__.py  catboost_trainer.py  catboost_tuner.py  data_loader.py  logging_config.py  serve_ray.py
notebooks/: serving.ipynb  training.ipynb  tuning.ipynb
tests/: test_catboost_trainer.py  test_catboost_tuner.py  test_data_loader.py  test_feature_types.py  test_serve.py
tools/: generate_data.py
